# primaprova

./: Particle.cpp  Particle.hpp  ParticleType.cpp  ParticleType.hpp  ResonanceType.cpp  ResonanceType.hpp  aaaaaa  forseèlavoltabuona  main.cpp  mmmm.c   che fa le cose  rrr.C  schifo
1 lab/: CMakeLists.txt  Particle.cpp  Particle.hpp  ParticleType.cpp  ParticleType.hpp  ResonanceType.cpp  ResonanceType.hpp  codice.txt  main.cpp
bagigio/: Particle.cpp  Particle.hpp  ResonanceType.cpp  ResonanceType.hpp  main.cpp  particleType.cpp  particleType.hpp
final - Copia/: Particle.cpp  Particle.hpp  ParticleType.cpp  ParticleType.hpp  ParticleType_cpp.d  ParticleType_cpp_ACLiC_dict_rdict.pcm  Particle_cpp_ACLiC_dict_rdict.pcm  ResonanceType.cpp  ResonanceType.hpp  ResonanceType_cpp_ACLiC_dict_rdict.pcm  mmm.C  output.root  sss.C
giornatadisantostefano/: Particle.cpp  ParticleType.cpp  ParticleType_cpp.d  ParticleType_cpp_ACLiC_dict_rdict.pcm  Particle_cpp.d  Particle_cpp_ACLiC_dict_rdict.pcm  ResonanceType.cpp  ResonanceType_cpp.d  mmm.C  output.root  sss.C
leb1-2/: Particle.cpp  Particle.hpp  ParticleType_cpp_ACLiC_dict_rdict.pcm  Particle_cpp_ACLiC_dict_rdict.pcm  ResonanceType.hpp  ResonanceType_cpp.d  ResonanceType_cpp_ACLiC_dict_rdict.pcm  mmm.C
mattinataconroot/: Particle.cpp  Particle.hpp  ParticleType.hpp  Particle_cpp_ACLiC_dict.cxx_tmp_69026  Particle_cpp_ACLiC_dict_rdict.pcm  ResonanceType_cpp_ACLiC_dict_rdict.pcm  mmm.C  mmmm.C  output.root
primaprova (copy)/: CMakeLists.txt  Particle.cpp  Particle.hpp  ResonanceType.cpp  particleType.hpp
vercingetorige - Copia/: CMakeLists.txt  Particle.cpp  mmm.C  (+6 more)
(+20 files in other folders)
